...
                android:layout_margin="21dp"
                android:text="@string/favorit"
                android:textSize="17sp"
                android:visibility="invisible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingHorizontal="13dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/rv_show_detail"
                app:layout_constraintStart_toStartOf="@id/rv_show_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_favorite"
                tools:listitem="@layout/favorite_content" />

            <ProgressBar
                android:id="@+id/pb_favorite"
...
