...
                android:id="@+id/tb_detail"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_baseline_chevron_left_white_36"
                    tools:ignore="ContentDescription" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
...
